# production-works

./: .gitignore  BUILD_AND_DISTRIBUTION_GUIDE.md  BUILD_EVERYTHING.sh  BUILD_QUICK_START.md  BUILD_STANDALONE_EXE.md  BUILD_WINDOWS_EXE.md  CODE_OF_CONDUCT.md  COMMUNITY_ANNOUNCEMENTS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_v1.0.0.md  ELECTRON_EXE_FINAL_SETUP.md  ELECTRON_PACKAGE_SUMMARY.md  EXE_STATUS.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERY_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FULL_DOCUMENTATION_INDEX.md  GET_WINDOWS_EXE.md  GRAND_PROJECT_COMPLETION.md  INSTALLATION_GUIDE_FOR_USERS.md  MASTER_STATUS.md  NEXT_STEPS_POST_v1.0.0.md  NSIS_PACKAGE_COMPLETE.md  NSIS_PACKAGE_INVENTORY.md  PLUGIN_UI_MOCKUP.md  POST_RELEASE_IMPLEMENTATION_COMPLETE.md  PROJECT_ARCHIVE.md  PROJECT_INDEX.md  PROJECT_STATUS.md  PROJECT_STATUS_COMPLETE.md  PROJECT_STATUS_POST_TASK9.md  PROJECT_STATUS_UPDATED.md  QUICK_BUILD_REFERENCE.md  QUICK_PREVIEW_GUIDE.md  QUICK_REFERENCE.md  README.md  READY_FOR_USERS.txt  READY_TO_SHARE_PACKAGE.md  (+66 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  issue-triage.yml  release.yml
electron/: ELECTRON_APP_GUIDE.md  QUICK_START.md  SETUP_AND_BUILD.md  build_windows.bat  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  run_scalechord.bat  scalechord_installer.nsi  styles.css  vst3-auto-installer.js
plugin/: ARCHITECTURE.md  BUILDING_VST3.md  CMakeLists.txt  CMakeLists.txt.test  CMakeLists_VST3.txt  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  FEATURES_ADVANCED.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  JUCE_INTEGRATION.md  JUCE_INTEGRATION_PHASE1.md  MIDI_ROUTING.md  PHASE1_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  VERSION.h  VST3_IMPLEMENTATION_GUIDE.md  VST3_QUICK_REFERENCE.md  VST3_SESSION_INDEX.md  build_vst3_plugin.sh  setup_juce.sh
plugin/cmake/: JuceSetup.cmake
plugin/include/: ChordAnalyzer.h  ChordVoicer.h  EffectsChain.h  Envelope.h  JazzReharmonizer.h  MIDIEffects.h  NoteTracker.h  PerformanceDashboard.h  PerformanceMetrics.h  PluginEditor.h  PresetBrowser.h  PresetManager.h  ScaleMapper.h  VoiceLeading.h
plugin/integration/: JUCEPluginProcessor.cpp  JUCEPluginProcessor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/juce_plugin/include/: JuceHeader.h  PluginEditor.h  PluginIds.h  PluginProcessor.h
plugin/juce_plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/: ChordAnalyzer.cpp  ChordVoicer.cpp  EffectsChain.cpp  Envelope.cpp  JazzReharmonizer.cpp  MIDIEffects.cpp  NoteTracker.cpp  PerformanceDashboard.cpp  PluginEditor.cpp  PresetBrowser.cpp  PresetManager.cpp  ScaleMapper.cpp  VoiceLeading.cpp  advanced_demo.cpp  demo_main.cpp
plugin/tests/: benchmark.cpp  test_chord_intelligence.cpp  test_effects_chain.cpp  test_performance_dashboard.cpp  test_presets.cpp  test_scale.cpp
plugin/vst3_build/: CMakeCache.txt  Makefile  ScaleChordPlugin_vst3_helper  cmake_install.cmake
plugin/vst3_build/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
plugin/vst3_build/JUCE/modules/: Makefile  cmake_install.cmake
plugin/vst3_build/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
plugin/vst3_build/JUCE/tools/modules/: Makefile  cmake_install.cmake
plugin/vst3_build/ScaleChordPlugin_artefacts/JuceLibraryCode/: Info.txt
plugin/vst3_build/ScaleChordPlugin_artefacts/JuceLibraryCode/Release/: Defs.txt
